--- a/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Address/Index.cshtml
@@ -6,29 +6,36 @@
 
 <p>Provide your data:</p>
 
-<div>
+<div class="content" style="width: 60%;">
     <form asp-action="Index" asp-controller="Address">
-        <label asp-for="Street"></label><br/>
-        <input type="text" asp-for="Street" size="11" class="text-danger" placeholder="Street" maxlength="35" required/>
-        <br/>
-        <label asp-for="City"></label><br/>
-        <input type="text" asp-for="City" size="11" class="text-danger" placeholder="City" maxlength="30" required/>
-        <br/>
-        <label asp-for="Country"></label><br/>
-        <input type="text" asp-for="Country" size="11" class="text-danger" placeholder="Country" maxlength="30" required/>
-        <br/>
-        <label asp-for="FullName"></label><br/>
-        <input type="text" asp-for="FullName" class="text-danger" placeholder="Full name" maxlength="35" required/>
-        <br/>
-        <label asp-for="Email"></label><br/>
-        <input type="text" asp-for="Email" size="23" class="text-danger" placeholder="jan.kowalski@@gmail.com" required pattern=".+@@.+.com" required/>
-        <br/>
-        <label asp-for="Phone"></label><br/>
-        <input type="tel" asp-for="Phone" size="11" class="text-danger" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" maxlength="11" placeholder="123-452-678" required/>
-        <br/>
-        <label asp-for="Zip"></label><br/>
-        <input type="text" asp-for="Zip" size="6" class="text-danger" pattern="[0-9]{2}-[0-9]{3}" maxlength="6" placeholder="60-400" required/>
-        <br/><br/>
-        <input type="submit" class="btn btn-primary" value="Payment"/>
+        <div class="mb-3">
+            <label asp-for="Street" class="form-label"></label>
+            <input type="text" asp-for="Street" size="11" class="form-control" placeholder="Street" maxlength="35" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="City" class="form-label"></label>
+        <input type="text" asp-for="City" size="11" class="form-control" placeholder="City" maxlength="30" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="Country" class="form-label"></label>
+        <input type="text" asp-for="Country" size="11" class="form-control" placeholder="Country" maxlength="30" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="FullName" class="form-label"></label>
+        <input type="text" asp-for="FullName" class="form-control" placeholder="Full name" maxlength="35" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="Email" class="form-label"></label>
+        <input type="text" asp-for="Email" size="23" class="form-control" placeholder="jan.kowalski@@gmail.com" required pattern=".+@@.+.com" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="Phone" class="form-label"></label>
+        <input type="tel" asp-for="Phone" size="11" class="form-control" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" maxlength="11" placeholder="123-452-678" required/>
+        </div>
+        <div class="mb-3">
+        <label asp-for="Zip" class="form-label"></label>
+        <input type="text" asp-for="Zip" size="6" class="form-control" pattern="[0-9]{2}-[0-9]{3}" maxlength="6" placeholder="60-400" required/>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
