--- a/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><i class="bi bi-basket"></i>Cart</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="Index"><i class="bi bi-basket"></i> Cart</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="OrderHistory"><i class="bi bi-card-checklist"></i>Order History</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="OrderHistory"><i class="bi bi-card-checklist"></i> Order History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Privacy">Privacy</a>
@@ -37,7 +37,9 @@
                     <li class="nav-item" style="left: 64%; position: relative;">
                         <a class="nav-link text-dark" asp-area="" asp-controller="SignUp" asp-action="Index">SignUp</a>
                     </li>*@
-                    <partial name ="_LoginPartial"/>
+                    <li class="nav-item" style="left: 24%; position: relative;">
+                        <partial name ="_LoginPartial"/>
+                    </li
                 </ul>
             </div>
         </div>
