--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -1,3 +1,9 @@
+@using Microsoft.AspNetCore.Identity
+@using Codecool.CodecoolShop.Areas.Identity.Data
+
+@inject SignInManager<CodecoolCodecoolShopUser> SignInManager
+@inject UserManager<CodecoolCodecoolShopUser> UserManager
+
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -26,28 +32,37 @@
                     <p class="card-text text-center">
                         <strong>Price: @element.DefaultPrice @element.Currency</strong>
                     </p>
-                    @if (!Model.OrderedProducts.Any(p => p.ProductId == element.Id))
+                    @if (SignInManager.IsSignedIn(User))
                     {
-                        <div style="text-align: center">
-                            <a asp-action="Add" asp-route-id="@element.Id" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
-                        </div>
+                        @if (!Model.OrderedProducts.Any(p => p.ProductId == element.Id))
+                        {
+                            <div style="text-align: center">
+                                <a asp-action="Add" asp-route-id="@element.Id" type="button" class="btn btn-primary" style="float: bottom">Add To Cart</a>
+                            </div>
+                        }
+                        @if (Model.OrderedProducts.Any(p => p.ProductId == element.Id))
+                        {
+                            <div style="text-align: center">
+                                <p class="card-text text-center">
+                                    Quantity:
+                                    @Model.OrderedProducts.Where(p => p.ProductId == element.Id).Select(p => p.Quantity).First()
+                                </p>
+                                <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
+                                    <i class="bi bi-plus-circle"></i>
+                                </a>
+                                <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
+                                    <i class="bi bi-dash-circle"></i>
+                                </a>
+                                <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; text-decoration: none; width: 40px;">
+                                    <i class="bi bi-x-circle-fill"></i>
+                                </a>
+                            </div>
+                        }
                     }
-                    @if (Model.OrderedProducts.Any(p => p.ProductId == element.Id))
+                    else
                     {
                         <div style="text-align: center">
-                            <p class="card-text text-center">
-                                Quantity:
-                                @Model.OrderedProducts.Where(p => p.ProductId == element.Id).Select(p => p.Quantity).First()
-                            </p>
-                            <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
-                                <i class="bi bi-plus-circle"></i>
-                            </a>
-                            <a asp-action="Minus" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
-                                <i class="bi bi-dash-circle"></i>
-                            </a>
-                            <a asp-action="Delete" asp-route-id="@element.Id" style="border-radius: 20px; color: red; font-size: 25px; text-decoration: none; width: 40px;">
-                                <i class="bi bi-x-circle-fill"></i>
-                            </a>
+                            <span>Login to add products to cart.</span>
                         </div>
                     }
                 </div>
