--- a/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Codecool.CodecoolShop.Areas.Identity.Data
+@using Codecool.CodecoolShop.Areas.Identity.Extension
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<CodecoolCodecoolShopUser> SignInManager
 @inject UserManager<CodecoolCodecoolShopUser> UserManager
@@ -7,7 +8,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.GetFullName()!</a>
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Product", new {area = ""})">
