--- a/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
+++ b/src/Codecool.CodecoolShop/Views/Product/Index.cshtml
@@ -45,7 +45,7 @@
                             <div style="text-align: center">
                                 <p class="card-text text-center">
                                     Quantity:
-                                    @Model.OrderedProducts.Where(p => p.ProductId == element.Id).Select(p => p.Quantity).First()
+                                    @Model.OrderedProducts.Where(p => p.ProductId == element.Id && p.Order.OrderPayed == "No").Select(p => p.Quantity).First()
                                 </p>
                                 <a asp-action="Add" asp-route-id="@element.Id" style="border-radius: 20px; color: black; font-size: 25px; text-decoration: none; width: 40px;">
                                     <i class="bi bi-plus-circle"></i>
